Создано с помощью Colaboratory

--- a/L4(Tree).ipynb
+++ b/L4(Tree).ipynb
@@ -946,6 +946,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Отбор признаков логистической регрессией"
+      ],
+      "metadata": {
+        "id": "pY8bZtbrdufM"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "from sklearn.linear_model import LogisticRegression\n",
@@ -1053,16 +1062,17 @@
       "cell_type": "code",
       "source": [
         "rfr=RandomForestRegressor()\n",
-        "print((cross_val_score(rfr, X_train_scaled, y_train, cv=5)).max)\n",
+        "res=(cross_val_score(rfr, X_train_scaled, y_train, cv=5))\n",
+        "print(res.max())\n",
         "rfr.fit(X_train, y_train)\n",
-        "print(rfc.score(X_train, y_train))"
+        "print(rfr.score(X_train, y_train))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "WeHkxY66goyC",
-        "outputId": "54ec7de5-08ea-47ba-afa8-9d07be218cde"
+        "outputId": "bbc972ed-7e6e-4c39-f5e2-475eb08ad93a"
       },
       "execution_count": null,
       "outputs": [
@@ -1070,7 +1080,8 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "0.9857718595975274\n"
+            "0.5457211575585309\n",
+            "0.9300497038971501\n"
           ]
         }
       ]
@@ -1195,6 +1206,15 @@
           "execution_count": 77
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Сравнение градиентного бустинга и леса"
+      ],
+      "metadata": {
+        "id": "p2Pm0ZhTeGUB"
+      }
     },
     {
       "cell_type": "code",
